// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Event.Thumbnail component renders thumbnail for annotation_added correctly 1`] = `
<div
  className="event-thumbnail-primary"
>
  <div
    className="wrapper"
  >
    <figure
      className="event-type"
    >
      <i
        aria-hidden="true"
        className="manicon manicon-undefined"
      />
    </figure>
  </div>
</div>
`;

exports[`Event.Thumbnail component renders thumbnail for project_created correctly 1`] = `
<div
  className="event-thumbnail-primary"
>
  <div
    className="wrapper"
  >
    <figure
      className="event-type"
    >
      <i
        aria-hidden="true"
        className="manicon manicon-egg"
      />
    </figure>
  </div>
</div>
`;

exports[`Event.Thumbnail component renders thumbnail for resource_added correctly 1`] = `
<div
  className="event-thumbnail-primary"
>
  <div
    className="wrapper"
  >
    <figure
      className="event-type"
    >
      <i
        aria-hidden="true"
        className="manicon manicon-cube-shine"
      />
    </figure>
  </div>
</div>
`;

exports[`Event.Thumbnail component renders thumbnail for text_added correctly 1`] = `
<div
  className="event-thumbnail-primary"
>
  <div
    className="wrapper"
  >
    <figure
      className="event-type"
    >
      <i
        aria-hidden="true"
        className="manicon manicon-book-opening"
      />
    </figure>
  </div>
</div>
`;

exports[`Event.Thumbnail component renders thumbnail for tweet correctly 1`] = `
<div
  className="event-thumbnail-primary"
>
  <div
    className="wrapper"
  >
    <figure
      className="event-type"
    >
      <i
        aria-hidden="true"
        className="manicon manicon-twitter"
      />
    </figure>
  </div>
</div>
`;
